<resources>
    <string name="app_name">GasMeter</string>
    <string name="app_name_zh">燃气统计</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="object_dir">gasData</string>
    <string name="query_meter_date_tip">时间选择</string>
    <string name="query_meter_date_begin">起始日期</string>
    <string name="query_meter_date_end">结束日期</string>
    <string name="query_meter_input_hint">地址查询</string>
    <string name="query_meter_active">统计</string>
    <string name="query_meter_place_show">分片区统计</string>
    <string name="query_meter_menu_filter">只显示未抄录</string>
    <string name="target_from_pc_file_name">GasMeterA.json</string>
    <string name="target_to_pc_file_name">GasMeterB.json</string>
    <string name="user_list">用户列表</string>
    <string name="meter_statistics">抄表统计</string>
    <string name="main_read_meter">抄    表</string>
    <string name="main_meter_show">查询统计</string>
    <string name="main_bluetooth">连接设备</string>
    <string name="main_exit">退    出</string>
    <string name="user_meter_item_name">户主名称：%1$s</string>
    <string name="user_meter_item_last_read">上次表底：%1$s</string>
    <string name="user_meter_item_last_read_date">上次日期：%1$s</string>
    <string name="user_meter_item_average_data">平均用量：%1$s</string>
    <string name="user_meter_item_this_read">本次表底：%1$s</string>
    <string name="user_meter_item_this_data">本月用量：%1$s</string>
    <string name="user_meter_item_address">用户地址：%1$s</string>
    <string name="input_dialog_title">输入抄表底数</string>
    <string name="bluetooth_title_no">未连接设备</string>
    <string name="bluetooth_title_yes">已连接</string>
    <string name="bluetooth_exception_no_name">设备名不能为空</string>
    <string name="bluetooth_exception_failed">设备连接失败</string>
    <string name="bluetooth_no_connect">未连接蓝牙设备</string>
</resources>
