<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/query_meter_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/query_meter_icon"
            android:hint="@string/query_meter_input_hint"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/query_meter_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="14sp"
        android:text="所有结果"
        />
    <ListView
        android:id="@+id/meter_details_list"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/query_meter_info_list_background"
        />
    <Button
        android:id="@+id/query_meter_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_meter_active"
        />
    <Button
        android:id="@+id/query_meter_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_exit"
        />
</LinearLayout>